@@ -1,13 +1,11 @@
 package org.jenkinsci.test.acceptance.po;
 
-import com.google.common.base.Joiner;
 import com.google.inject.Injector;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import jakarta.inject.Inject;
 import java.lang.reflect.Constructor;
 import java.net.URL;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.function.Consumer;
@@ -181,7 +179,7 @@ public class CapybaraPortingLayerImpl implements CapybaraPortingLayer {
     @Override
     public WebElement find(final By selector) {
         try {
-            return waitFor().withTimeout(Duration.ofMillis(time.seconds(1))).until(new Callable<WebElement>() {
+            return waitFor().withTimeout(Duration.ofMillis(time.seconds(1))).until(new Callable<>() {
                 @Override
                 public WebElement call() {
                     for (WebElement element : driver.findElements(selector)) {
@@ -501,14 +499,14 @@ public class CapybaraPortingLayerImpl implements CapybaraPortingLayer {
                 return type.cast(c.newInstance(args));
             }
 
-            throw new AssertionError("No matching constructor found in " + type + ": " + Arrays.asList(args));
+            throw new AssertionError("No matching constructor found in " + type + ": " + List.of(args));
         } catch (ReflectiveOperationException e) {
             throw new AssertionError("Failed to invoke a constructor of " + type, e);
         }
     }
 
     protected <T> T findCaption(Class<?> type, Function<String, T> finder) {
-        return findCaption(type, new Finder<T>() {
+        return findCaption(type, new Finder<>() {
             @Override
             protected T find(String caption) {
                 return finder.apply(caption);
@@ -519,8 +517,8 @@ public class CapybaraPortingLayerImpl implements CapybaraPortingLayer {
     protected <T> T findCaption(Class<?> type, Finder<T> call) {
         String[] captions = type.getAnnotation(Describable.class).value();
 
-        RuntimeException cause = new NoSuchElementException(
-                "None of the captions exists: " + Joiner.on(", ").join(captions));
+        RuntimeException cause =
+                new NoSuchElementException("None of the captions exists: " + String.join(", ", captions));
         for (String caption : captions) {
             try {
                 T out = call.find(caption);
